sword impl